.metadata/.plugins/org.eclipse.cdt.ui/VisionRobot.build.log
17:35:33 **** Incremental Build of configuration Debug for project VisionRobot ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Samsung/wpilib/cpp/current/include" "-IC:\\Robotics\\Komodo\\VisionRobot\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
..\src\Robot.cpp: In member function 'virtual void Robot::RobotInit()':
..\src\Robot.cpp:16:15: error: cannot convert 'std::shared_ptr<NetworkTable>' to 'NetworkTable*' in assignment
   visionTable = NetworkTable::GetTable("visionTable");
               ^
..\src\Robot.cpp: In member function 'virtual void Robot::TeleopInit()':
..\src\Robot.cpp:36:46: warning: 'virtual double NetworkTable::GetNumber(llvm::StringRef) const' is deprecated (declared at C:\Users\Samsung/wpilib/cpp/current/include/networktables/NetworkTable.h:277): Raises an exception if key not found; use GetNumber(StringRef key, double defaultValue) instead [-Wdeprecated-declarations]
   frameWidth = visionTable->GetNumber("width");
                                              ^
..\src\Robot.cpp:37:48: warning: 'virtual double NetworkTable::GetNumber(llvm::StringRef) const' is deprecated (declared at C:\Users\Samsung/wpilib/cpp/current/include/networktables/NetworkTable.h:277): Raises an exception if key not found; use GetNumber(StringRef key, double defaultValue) instead [-Wdeprecated-declarations]
   frameHeight = visionTable->GetNumber("height");
                                                ^
..\src\Robot.cpp:38:49: warning: 'virtual double NetworkTable::GetNumber(llvm::StringRef) const' is deprecated (declared at C:\Users\Samsung/wpilib/cpp/current/include/networktables/NetworkTable.h:277): Raises an exception if key not found; use GetNumber(StringRef key, double defaultValue) instead [-Wdeprecated-declarations]
   tolerance = visionTable->GetNumber("Tolerance");
                                                 ^
..\src\Robot.cpp:39:49: warning: 'virtual double NetworkTable::GetNumber(llvm::StringRef) const' is deprecated (declared at C:\Users\Samsung/wpilib/cpp/current/include/networktables/NetworkTable.h:277): Raises an exception if key not found; use GetNumber(StringRef key, double defaultValue) instead [-Wdeprecated-declarations]
   yMovePerTick = visionTable->GetNumber("yTicks");
                                                 ^
..\src\Robot.cpp:40:49: warning: 'virtual double NetworkTable::GetNumber(llvm::StringRef) const' is deprecated (declared at C:\Users\Samsung/wpilib/cpp/current/include/networktables/NetworkTable.h:277): Raises an exception if key not found; use GetNumber(StringRef key, double defaultValue) instead [-Wdeprecated-declarations]
   xMovePerTick = visionTable->GetNumber("xTicks");
                                                 ^
..\src\Robot.cpp: In member function 'virtual void Robot::TeleopPeriodic()':
..\src\Robot.cpp:45:46: warning: 'virtual bool NetworkTable::GetBoolean(llvm::StringRef) const' is deprecated (declared at C:\Users\Samsung/wpilib/cpp/current/include/networktables/NetworkTable.h:346): Raises an exception if key not found; use GetBoolean(StringRef key, bool defaultValue) instead [-Wdeprecated-declarations]
   if(visionTable->GetBoolean("detectedObject")){
                                              ^
..\src\Robot.cpp:47:38: warning: 'virtual double NetworkTable::GetNumber(llvm::StringRef) const' is deprecated (declared at C:\Users\Samsung/wpilib/cpp/current/include/networktables/NetworkTable.h:277): Raises an exception if key not found; use GetNumber(StringRef key, double defaultValue) instead [-Wdeprecated-declarations]
    int x = visionTable->GetNumber("X");
                                      ^
..\src\Robot.cpp:48:38: warning: 'virtual double NetworkTable::GetNumber(llvm::StringRef) const' is deprecated (declared at C:\Users\Samsung/wpilib/cpp/current/include/networktables/NetworkTable.h:277): Raises an exception if key not found; use GetNumber(StringRef key, double defaultValue) instead [-Wdeprecated-declarations]
    int y = visionTable->GetNumber("Y");
                                      ^

17:35:36 Build Finished (took 2s.320ms)

